--- a/hw2.html
+++ b/hw2.html
@@ -15,17 +15,17 @@
 		<div id="top">
 
 			<div id="logo" class="top_layer">
-				<img src="img/logo.png"/>
+				<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/logo.png"/>
 			</div>
 			<div id="share" class="top_layer">
 				<div id="facebook" class="share_btn">
-					<img src="img/btn_facebook.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/btn_facebook.png">
 				</div>
 				<div id="twitter" class="share_btn">
-					<img src="img/btn_twitter.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/btn_twitter.png">
 				</div>
 				<div id="google" class="share_btn">
-					<img src="img/btn_google_plus.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/btn_google_plus.png">
 				</div>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 		大尺吋相片
 		-->
 		<div id="big_photo">
-			<img src="img/bg_sliderbox.png">
+			<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_sliderbox.png">
 		</div>
 		<!--
 		Services、Portfolio、Testimonials
@@ -59,19 +59,19 @@
 					</th>
 					<tr >
 						<td class="service_pic_left" >
-							<img src="img/ic_services_webdesign.png">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/ic_services_webdesign.png">
 						</td>
 						<td class="service_article">Web Design</td>
 					</tr>
 					<tr>
 						<td class="service_pic_left">
-							<img src="img/ic_services_webdevelopment.png">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/ic_services_webdevelopment.png">
 						</td>
 						<td class="service_article">Web Development</td>
 					</tr>
 					<tr>
 						<td class="service_pic_left">
-							<img src="img/ic_services_bulksms.png">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/ic_services_bulksms.png">
 						</td>
 						<td class="service_article" >Bulk SMS</td>
 					</tr>
@@ -91,24 +91,24 @@
 					</th>
 					<tr>
 						<td  >
-							<img src="img/bg_portfolio_galleryboxes_1.png" class="port_pic_top">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_1.png" class="port_pic_top">
 						</td>
 						<td >
-							<img src="img/bg_portfolio_galleryboxes_2.png" class="port_pic_top">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_2.png" class="port_pic_top">
 						</td>
 						<td >
-							<img src="img/bg_portfolio_galleryboxes_3.png" class="port_pic_top_left">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_3.png" class="port_pic_top_left">
 						</td>
 					</tr>
 					<tr>
 						<td >
-							<img src="img/bg_portfolio_galleryboxes_4.png" class="port_pic">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_4.png" class="port_pic">
 						</td>
 						<td >
-							<img src="img/bg_portfolio_galleryboxes_5.png" class="port_pic">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_5.png" class="port_pic">
 						</td>
 						<td >
-							<img src="img/bg_portfolio_galleryboxes_6.png" class="port_pic_left">
+							<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_portfolio_galleryboxes_6.png" class="port_pic_left">
 						</td>
 					</tr>
 				</table>
@@ -145,17 +145,17 @@
 				</div>
 				<div class="Our_Blog_article">
 
-					<img src="img/bg_ourblog_thumbnail.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_ourblog_thumbnail.png">
 					<a class="Our_Blog_article_title">Beautiful Flower photography</a><br>
 					<a class="Our_Blog_article_article">Yogesh/Photography/24 Feb</a>
 				</div>
 				<div class="Our_Blog_article">
-					<img src="img/bg_ourblog_thumbnail.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_ourblog_thumbnail.png">
 					<a class="Our_Blog_article_title">Beautiful Flower photography</a><br>
 					<a class="Our_Blog_article_article">Yogesh/Photography/24 Feb</a>
 				</div>
 				<div class="Our_Blog_article">
-					<img src="img/bg_ourblog_thumbnail.png">
+					<img src="https://raw.githubusercontent.com/sean60706/font_web_hw2/master/img/bg_ourblog_thumbnail.png">
 					<a class="Our_Blog_article_title">Beautiful Flower photography</a><br>
 					<a class="Our_Blog_article_article">Yogesh/Photography/24 Feb</a>
 				</div><!--Our_Blog_article  -->
